2002-06-24  Luke Gorrie  <luke@bluetail.com>

	* erl/distel.erl: Erlang-side debugger support. Fprof interface
	can parse expressions.

	* elisp/erlang-mode-ext.el: More key bindings ("C-c C-e" prefix),
	moved debugging code to edb.el

	* elisp/edb.el: New file for (much improved and extended) debugger
	code.

	* elisp/erl-service.el (erl-find-source): Added erl-find-source to
	find and load the source code for a module by name.
	(fprof): Fprof now takes an erlang expression as input instead of
	MFA.

	* elisp/erl.el (erl-run-process): Saves current buffer when
	invoking the process continuation, so that cleanup works when the
	process returns in another buffer.

2002-06-17  Luke Gorrie  <luke@bluetail.com>

	* elisp/erlang-mode-ext.el, erl/distel.erl: Beginnings of
	debugger support: partial implementation of the "monitor".

2002-06-02  Luke Gorrie  <luke@bluetail.com>

	* erl/distel.erl: Added rpc_entry(M,F,A) which installs a
	group_leader proxy/adapter.

	* elisp/net-fsm.el: Sprinkled some more multibyte-avoidance code
	around. The default coding-system mangled messages on my laptop,
	but with 'no-conversion' it now works.

	* elisp/erl.el: Added "real" group_leader support, with a default
	group_leader writing output to *erl-output*. The group leader
	protocol is not the same as Erlang's (needs to be adapted), and
	supports just one message: {put_chars, Chars}.

	* elisp/erl-service.el (erl-send-rpc): RPCs now go via
	distel:rpc_entry(M,F,A), to setup a group_leader.
	(erl-eval-expression): Added - evaluates an erlang expression.

	* elisp/derl.el: Giving a specific error when 'dec32' isn't
	installed in PATH.

2002-04-24  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (fprof): Added a front-end to the 'fprof'
	profiler. Very minimal so far.

2002-04-22  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl.el (erl-run-process): Uncaught errors in processes
	are now caught by the scheduler, which terminates the process and
	then continues.
